@@ -1,3 +1,4 @@
+* Check pending shipment to erase party
 * Define how inventory non filled lines are managed
 * Do not fill inventory quantity automatically
 * Assign supplier return shipment using children when location is a view
